css/stylesheet.css
body{
    position: relative;
}

#experience li {
    font-size: 1.2em;
}

#aboutSection img {
    width: 26%;
    float: left;
    height: 9em;
    border-radius: 5px;
    margin-right: 2%;
    margin-top: 1%;
}

#experienceSpan{
    position: relative;
    top: 2em;
    opacity: 0;
}

#experience .col-md-4 {
    position: relative;
    margin-top: 1em;
    top: 4em;
}

#experience .col-md-4:nth-child(2){
    -webkit-animation-delay: .3s;
}

#experience .col-md-4:nth-child(3){
    -webkit-animation-delay: .5s;
}



@-webkit-keyframes experienceBounce {
    from{
        top: 4em;
    }
    to{
        top: 0em;
    }
}

.bounce{
    -webkit-animation: experienceBounce .8s cubic-bezier(.42,0,.2,2) forwards;
}

div#smallDiv {
    width: 0%;
    overflow: hidden;
    position: relative;
    left: 50%;
    transform: translate(-48%, 36%);
}

h5 {
    font-size: 1.45em;
    color: rgba(0, 0, 0, 0.63);
    font-family: sans-serif;
    width: 200px;

}

#experienceUnderline {
    position: absolute;
    border: 2px solid #FFB84D;
    bottom: 0;
    left: 0;
    right: 0;
    transition: 2s;
    transform: scale(0);
    transform-origin: 50% 50%;
}

@-webkit-keyframes experienceUnderlineAnimation{
    from{
        transform: scale(0);
    }
    to{
        transform: scale(1);
    }
}


.transformClass{
    -webkit-animation: experienceUnderlineAnimation 1.4s forwards;
}

#experience .col-md-4 .container-fluid {
    text-align: center;
    border: 1px solid black;
    border-radius: 5px;
    transition: 1.5s;
    transform: scale(1);
    transform-origin: 50% 0;
    background-color: white;
    box-shadow: 0px 0px 10px black;
    height: 60px;
    overflow: hidden;
}

@-webkit-keyframes experienceHeightAnimation{
    from{
        height: 60px;
    }
    to{
        height: 235px;
    }
}

@-webkit-keyframes experienceHeightAnimation2{
    from{
        height: 60px;
    }
    to{
        height: 150px;
    }
}

@-webkit-keyframes experienceHeightAnimation3{
    from{
        height: 60px;
    }
    to{
        height: 195px;
    }
}

.addHeight2{
    -webkit-animation:experienceHeightAnimation2 1s forwards ;
}
.addHeight3{
    -webkit-animation:experienceHeightAnimation3 1s forwards ;
}
.addHeight{
    -webkit-animation:experienceHeightAnimation 1s forwards ;
}

#experience .container {
    margin-top: 2em;
    padding-bottom: 5em;
}

#experience{
    background: -webkit-linear-gradient(#dcdcdc, rgba(228, 228, 228, 0.39));
    height: 507px;
}




#experience ul {
    list-style-type: none;
    padding: 0;
}

#experience h2 {
    padding-top: 2.5em;
    margin-top: 0;
}



section#work button:hover {
    cursor: pointer;
    background-color: #fc5a2f;
    color: white;
    border-color: #fc5a2f;
}

#work button {
    outline: none;
}



#firstButton {
    border-radius: 5px 0 0 5px!important;
}

#lastButton {
    border-radius: 0 5px 5px 0 !important;
}

section#getInTouch {
    background-color: black;
    padding: 3% 0;
    font-family: sans-serif;
    color: white;
    position: relative;
}


#getInTouch button {
    color: white;
    width: 39%;
    padding: 2%;
    font-family: sans-serif;
    border-color: #737373;
    border-radius: 5px;
    font-size: 1.3em;
}

section#getInTouch span {
    font-size: 1.8em;
}



span#getInTouchUnderline {
    position: absolute;
    background-color: white;
    border: 1px solid white;
    bottom: 0;
    left: 0;
    right: 0;
    width: 6.2em;
    transform-origin: 0 0;

}



section#getInTouch p {
    font-size: 1.5em;
    position: relative;
    left: 4em;
}



.buttonActive{
    background-color: #fc5a2f;
    color: white;
    width: 100%;
    padding: 5%;
    font-family: sans-serif;
    border-color: #fc5a2f;
}


.notActive{
    background-color: #171717;
    color: white;
    width: 100%;
    padding: 5%;
    font-family: sans-serif;
    border-color: #737373;
}


section#work > .container:first-child {
    position: relative;
    top: 7%;
}

.imgCol {
    padding: 0;
}

.row.imgRow {
    margin-top: 1em;
    margin-bottom: 5em;
}


.filterContainer, .filterContainer .row > div{
    padding: 0;
    margin-top: 2%;
}

button.btn.btn-info.filterButton {
    width: 100%;
}

span#aboutSpan {
    position: relative;
}

#about h2{
    opacity: 0;
}


.project{
    position: relative;
    width: 100%;
    height: 250px;
}

.slide{
  position: relative;
    transition: 0.7s;

}

.slide.ng-enter{
   opacity: 0;
    left: -100px;
}

.slide.ng-enter-stagger{
    transition-delay:.2s;
    transition-duration: 0s;
}

.slide.ng-enter-active{
    opacity: 1;
    left: 0;
    transition-timing-function: cubic-bezier(.21,1.28,.71,1.43);
}

.slide.ng-leave {
    opacity: 1;
    left: 0;
}

.slide.ng-leave-active{
    opacity: 0;
    left: -300px;
}


span#aboutSpanUnderline {
    position: absolute;
    border: 2px solid #FFB84D;
    top: 100%;
    left: 0;
    right: 0;
    transform: scale(0);
}

ul.nav.navbar-nav li:first-child {
    background-color: rgba(245, 252, 255, 0.53);
}


.paragraphContainer .col-md-6:first-child{
    left: -100%;
}

.paragraphContainer .col-md-6:nth-child(2){
    right: -100%;
}

span#line-break {
    position: absolute;
    border: 1px solid #BDBDBD;
    height: 625%;
    right: 50%;
    top: 200%;
    opacity: 0;
    transform-origin: 0 0 ;
}


section#aboutSection {
    background: -webkit-linear-gradient(#dcdcdc, rgba(228, 228, 228, 0.39));
    position: relative;
    height: 480px;
    font-family: sans-serif;
    font-weight: 300;
}

div#about .row:first-child {
    height: 100%;

}

div#about {
    height: 100%;
}

div#about .row .col-md-12 {
    height: 94%;
    position: relative;
}

.paragraphContainer{
    position: relative;
    height: 63%;
    opacity: 1;
    top: 18%;
}


.paragraphContainer .col-md-6{
    position: relative;
}

h2{
    font-family: sans-serif;
    position: relative;
    font-weight: 300;
    transform: translateX(-50%);
    left: 50%;
}

#work span:first-child {
    position: relative;
}
/* ... */

